// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropdown items a 1`] = `
<li>
  <a
    aria-disabled={false}
    className=""
    href="#"
    onKeyDown={[Function]}
  >
    Something
  </a>
</li>
`;

exports[`dropdown items button 1`] = `
<li>
  <button
    className=""
    disabled={false}
    href="#"
    type="button"
    onKeyDown={[Function]}
  >
    Something
  </button>
</li>
`;

exports[`dropdown items disabled a 1`] = `
.pf-m-disabled {
  display: block;
}

<li>
  <a
    aria-disabled={true}
    className="pf-m-disabled"
    href="#"
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    Something
  </a>
</li>
`;

exports[`dropdown items disabled button 1`] = `
.pf-m-disabled {
  display: block;
}

<li>
  <button
    className="pf-m-disabled"
    disabled={true}
    href="#"
    type="button"
    onKeyDown={[Function]}
  >
    Something
  </button>
</li>
`;

exports[`dropdown items disabled a 1`] = `<[object Object] />`;

<li>
  <a
    aria-disabled={false}
    className="pf-m-hover"
    href="#"
    onKeyDown={[Function]}
  >
    Something
  </a>
</li>
`;

exports[`dropdown items hover a 1`] = `<[object Object] />`;

<li>
  <button
    className="pf-m-hover"
    disabled={false}
    href="#"
    type="button"
    onKeyDown={[Function]}
  >
    Something
  </button>
</li>
`;

exports[`dropdown items separator 1`] = `
.pf-c-dropdown__separator {
  display: block;
  height: 1px;
  background-color: #ededed;
}

<DropdownItem
  className="pf-c-dropdown__separator"
  component="div"
  href="#"
  index={-1}
  isDisabled={false}
  isHovered={false}
  onClick={[Function]}
  keyHandler={[Function]}
  role="separator"
  sendRef={[Function]}
/>
`;
